cabal-version:      3.0
name:               adventofcode2022
version:            0.1.0.0
author:             Aleksei Pirogov
maintainer:         astynax@users.noreply.github.com

common defaults
    default-language:   Haskell2010
    default-extensions: BlockArguments
                      , ImportQualifiedPost
                      , TupleSections
    build-depends:      base ^>=4.14.3.0
                      , megaparsec
                      , containers
    ghc-options:        -Wall

common task
    import:           defaults
    build-depends:    adventofcode2022
    hs-source-dirs:   .

library
    import:           defaults
    default-language: Haskell2010
    hs-source-dirs:   lib
    exposed-modules:  Megaparsec
                    , Pos
                    , ReadP
    ghc-options:     -Wall

executable day01
    import:           task
    main-is:          Day01.hs

executable day02
    import:           task
    main-is:          Day02.hs

executable day03
    import:           task
    main-is:          Day03.hs

executable day04
    import:           task
    main-is:          Day04.hs

executable day05
    import:           task
    main-is:          Day05.hs

executable day06
    import:           task
    main-is:          Day06.hs

executable day07
    import:           task
    main-is:          Day07.hs

executable day08
    import:           task
    main-is:          Day08.hs

executable day09
    import:           task
    main-is:          Day09.hs
